# ai-drone-control

./: .gitignore  README.md
Google_Map_Visual_Navigation/: Google_Map_Position_Estimator.py
Google_Map_Visual_Navigation/Reference_PF_Project/: CMakeLists.txt  README.md  build_project.sh
Google_Map_Visual_Navigation/Reference_PF_Project/face_tracker/: CMakeLists.txt  README.md  face_tracker.cpp  face_tracker.hpp  pf_face_tracker.py
Google_Map_Visual_Navigation/Reference_PF_Project/face_tracker/gtest/: CMakeLists.txt  face_tracker_test.cc
Google_Map_Visual_Navigation/Reference_PF_Project/filters/: CMakeLists.txt  README.md
Google_Map_Visual_Navigation/Reference_PF_Project/filters/include/: filters_util.hpp  particle_filter.hpp  thread_pool.hpp
Google_Map_Visual_Navigation/mosse_filter/: mosse.py  utils.py
Loading_PX4_Autopilot_Firmware_From_Linux/: README.md
Rover_Path_Planning/: path_planning.py  path_planning_tester.py
Row_Detection_Algorithm/: Row_Detection_Algorithm_Notebook.ipynb
Single_Object_Tracker/: Object_Tracker_SIFT_Shi_Tomosai_with_KLT.py  Object_Tracker_Sampler.py  Object_Tracker_test.py
dan/: hovercraft.md
