cmake_minimum_required(VERSION 3.10.0)	#telling CMake
project(filters VERSION 1.0.0)

# add_library(filters STATIC particle_filter.cpp)
# target_compile_options(filters PUBLIC -Wall -Wextra)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -std=c++2a -O3") 
# add_definitions(${GCC_COMPILE_FLAGS})
#
# target_include_directories(filters PUBLIC include)


